Añadiendo menú y favicon

--- a/index.html
+++ b/index.html
@@ -4,12 +4,22 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Portafolio Felipe Castellanos</title>
         <link rel="stylesheet" href="css/styles.css"/>
+        <link rel="icon" type="image/png" sizes="32x32" href="Imagenes/iconos/favicon.png"/>
     </head>
     <body>
         <header>
             <div class="image-container" id="logo-negocio">
                 <img src="Imagenes/Logo.jpg" alt="Logo del negocio"/>
             </div>
+            <nav class="menu-opcion" id="menu">
+                <ul>
+                    <a>About me</a>
+                    <a>Projects</a>
+                    <a>Education</a>
+                    <a>Experience</a>
+                    <a>Contact</a>
+                </ul>
+            </nav>
         </header>
 
         <section id="hero">
@@ -37,7 +47,7 @@
                 and challenges.
             </p>
             <br/>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem corporis magnam, nihil commodi dolorem porro nulla neque qui dolores inventore ducimus! Harum, nulla vel. Quasi eligendi unde enim itaque asperiores!</p>
+            <p>Alistando más material!!!</p>
             
             <ul class="social-icons">
                 <li>
