Añadiendo parrafo de material

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 and challenges.
             </p>
             <br/>
-            <p>Alistando más material!!!</p>
+            <p>Preparing more material!!!</p>
             
             <ul class="social-icons">
                 <li>
