Actualizando parrafos y presentación

--- a/index.html
+++ b/index.html
@@ -35,17 +35,13 @@
                     <h1>Felipe Castellanos</h1>
                     <span>@felipecaste1</span>
 
-                    <p>Full stack developer | Backend Developer | Frontend Developer | Sales management | Business man | Influencer</p>
+                    <p>Estudiante de programación | .Net | C# | SQL | Git | HTML | CSS | JS | Full Stack Developer | Backend Developer | Frontend Developer | Administrador de Empresas | Estratega | Negociador | Comercial | Mercadeo | Trade</p>
                 </div>
             </div>
         </section>
         
         <main>
-            <p id="About-me">Business administrator passionate about business management, strategy creation and execution, 
-                web and software development, with knowledge in different programming languages. Good team worker, 
-                charismatic, proactive, receptive to continuous improvement and initiative to acquire new knowledge 
-                and challenges.
-            </p>
+            <p id="About-me">Business administrator passionate about software development, strategy creation and project management with knowledge in different programming languages. Excellent team worker, charismatic, proactive receptive to continuous improvement and initiative to acquire new knowledge and challenges.</p>
             <br/>
             <p>Preparing more material based on the navigation bar 🫡!!!</p>
             
